--- a/bar/assets/styles/app.scss
+++ b/bar/assets/styles/app.scss
@@ -1,7 +1,7 @@
-// assets/styles/global.scss
+$primary: darken(red, 20%);
 
-// customize some Bootstrap variables
-$primary: darken(#428bca, 20%);
+$body-bg: #C5FF33;
+$body-color: #C5FF33;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
