--- a/bar/templates/partials/menu.html.twig
+++ b/bar/templates/partials/menu.html.twig
@@ -1,18 +1,20 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-	<a class="navbar-brand" href="#">The Simple Bar/beers</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="bg-white m-3 p-1" href="{{ path('home') }}">Home</a>
-			</li>
-            {% for category in categories %}
-            <li class="nav-item">
-				<a class="bg-white m-3 p-1" href="{{ path('show_beer_category', { id : category.id}) }}">{{category.name}}</a>
-			</li>
-            {% endfor %}
-		</ul>
-	</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">The Simple Bar/beers</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+		<a class="nav-link {% if route_name and route_name == 'home' %}active{% endif %}" href="{{ path('home') }}">Home</a>
+        </li>
+         {% for category in categories %}
+        <li class="nav-item">
+          <a class="nav-link {% if category_id and category_id == category.id %}active{% endif %}" href="{{ path('show_beer_category', { id : category.id}) }}">{{category.name}}</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 </nav>
